@@ -49,6 +49,10 @@
 	<LI>The tabloid media size was 10 points too short in
 	length.
 
+	<LI>The table formatter now subtracts the outside border
+	and padding widths for percentage-based widths.  This
+	helps to eliminate "truncation or overlapping" errors.
+
 	<H3 _HD_OMIT_TOC>Bug Fixes</H3>
 
 	<LI>Switching between landscape and portrait orientations
